# chainlit-pydanticai-postgres

./: .env.example  .gitignore  README.md  azure-pipelines.yml  config.py  pyproject.toml
.chainlit/: config.toml
docs/: README.md  chatbot-architecture.drawio  deploy-azure-app-service.md  future-enhancements.md  nvd-integration.md  use-cases.md
infra/: main.bicep  parameters.dev.bicepparam
infra/modules/: app-service.bicep  rbac.bicep
k8s/: deployment.yaml
rag/: agent.py  database.py  embeddings.py  vector_store.py
scripts/: load_kev.py  load_nvd.py
