[project]
name = "rag-chatbot"
version = "0.1.0"
description = "A retrieval-augmented generation chatbot built with Pydantic AI and Chainlit. Uses PostgreSQL with pgvector for persistent vector storage of CISA KEV data."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.78.0",
    "asyncpg>=0.30.0",
    "azure-identity>=1.21.0",
    "azure-storage-blob>=12.25.0",
    "boto3>=1.40.61",
    "chainlit>=2.9.6",
    "httpx>=0.28.0",
    "openai>=2.17.0",
    "pgvector>=0.4.0",
    "pydantic-ai>=1.38.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "langfuse>=3.0.0",
]
